# socrates-workshop-testing

./: .gitignore  Justfile  README.md  pyproject.toml  sample_project.ipynb
.devcontainer/: devcontainer.json
data/: README.md
src/app/: db.py  main.py  source.py
tests/: test_db.py  test_main.py  test_main_e2e.py  test_source.py
tests/e2e/features/: App.feature
