[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.12",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
]

[dependency-groups]
dev = [
    "notebook>=7.4.4",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "freezegun>=1.5.3",
    "pytest-mock>=3.14.1",
    "pytest-bdd>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "e2e: Run e2e tests",
]
